[package]
name = "pcapstreamer"
version = "0.2.1-alpha.0"
authors = ["Michael Krolikowski <mkroli@yahoo.de>"]
edition = "2018"
publish = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
error-chain = "0.12"
log = "0.4"
fern = "0.5"
chrono = "*"
clap = "2.33"
pcap = "0.7"
pcap-file = "1.0"
tokio = "0.1"
futures = "0.1"
rdkafka = "0.20"
